add Feliz sample

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="elmish-lit"></div>
     <x-olv></x-olv>
+    <x-olv-2></x-olv-2>
     <script type="module" src="/dist/Main.fs.js"></script>
   </body>
 </html>
