--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,7 @@
     <link rel="shortcut icon" href="fable.ico" />
   </head>
   <body>
-    <div id="elmish-lit"></div>
-    <x-olv></x-olv>
-    <x-olv-2></x-olv-2>
+    <ex-app></ex-app>
     <script type="module" src="/dist/Main.fs.js"></script>
   </body>
 </html>
